lints.workspace = true

[package]
name = "gix-filter"
version = "0.32.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project implementing git filters"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2024"
rust-version = "1.85"
include = [
    "/src/**/*",
    "/LICENSE-*",
    # Cargo packages declared examples and binaries, and the example includes the test helper.
    "/examples/arrow.rs",
    "/tests/helpers/arrow.rs",
]

[lib]
doctest = false

[[bin]]
name = "gix-filter-test-arrow"
path = "tests/helpers/arrow.rs"
# The self dev-dependency below enables this only while building tests.
required-features = ["test-helper"]
test = false
bench = false
doc = false

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = ["gix-hash/sha1"]
## Enable support for the SHA-256 hash by forwarding the feature to dependencies.
sha256 = ["gix-hash/sha256"]
## Internal feature for building binaries referenced by integration tests through CARGO_BIN_EXE_*.
test-helper = []

[dependencies]
gix-hash = { version = "^0.25.1", path = "../gix-hash" }
gix-trace = { version = "^0.1.20", path = "../gix-trace" }
gix-object = { version = "^0.62.0", path = "../gix-object" }
gix-command = { version = "^0.9.1", path = "../gix-command" }
gix-quote = { version = "^0.7.2", path = "../gix-quote" }
gix-utils = { version = "^0.3.4", path = "../gix-utils" }
gix-path = { version = "^0.12.2", path = "../gix-path" }
gix-packetline = { version = "^0.21.5", path = "../gix-packetline", features = ["blocking-io"] }
gix-attributes = { version = "^0.33.2", path = "../gix-attributes" }

encoding_rs = "0.8.32"
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
thiserror = "2.0.18"
smallvec = "1.15.1"


[dev-dependencies]
gix-filter = { path = ".", features = ["test-helper"] }
gix-hash = { path = "../gix-hash", features = ["sha1", "sha256"] }
gix-quote = { path = "../gix-quote" }
gix-testtools = { path = "../tests/tools" }
gix-worktree = { path = "../gix-worktree", default-features = false, features = ["attributes"] }

[package.metadata.docs.rs]
features = ["sha1"]
