lints.workspace = true

[package]
name = "gix-fs"
version = "0.14.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate providing file system specific utilities to `gitoxide`"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.75"
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde"]

[dependencies]
bstr = "1.5.0"
gix-path = { version = "^0.10.15", path = "../gix-path" }
gix-features = { version = "^0.41.0", path = "../gix-features", features = ["fs-read-dir"] }
gix-utils = { version = "^0.2.0", path = "../gix-utils" }
thiserror = "2.0.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["std", "derive"] }

# For `Capabilities` to assure parallel operation works.
fastrand = { version = "2.1.0", default-features = false, features = ["std"] }

[dev-dependencies]
crossbeam-channel = "0.5.0"
is_ci = "1.1.1"
tempfile = "3.5.0"
