lints.workspace = true

[package]
name = "gix-fsck"
version = "0.15.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
authors = ["Cameron Esfahani <cesfahani@gmail.com>", "Sebastian Thiel <sebastian.thiel@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "Verifies the connectivity and validity of objects in the database"
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = false

[dependencies]
gix-hash = { version = "^0.21.0", path = "../gix-hash" }
gix-hashtable = { version = "^0.11.0", path = "../gix-hashtable" }
gix-object = { version = "^0.53.0", path = "../gix-object" }

[dev-dependencies]
gix-odb = { path = "../gix-odb" }
gix-testtools = { path = "../tests/tools" }
