lints.workspace = true

[package]
name = "gix-hash"
version = "0.16.0"
description = "Borrowed and owned git hash digests used to identify git objects"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.70"

[lib]
doctest = false
test = false

[features]
# Temporary, to avoid a circular dependency on `gix-features`.
progress-unit-bytes = ["prodash/unit-bytes"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde"]

[dependencies]
# Temporary, to avoid a circular dependency on `gix-features`.
prodash = "29.0.1"

thiserror = "2.0.0"
faster-hex = { version = "0.9.0" }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
sha1-checked = { version = "0.10.0", default-features = false }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
