lints.workspace = true

[package]
name = "gix-index"
version = "0.41.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A work-in-progress crate of the gitoxide project dedicated implementing the git index file"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version = "1.70"
autotests = false


[lib]
doctest = false
test = true

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "smallvec/serde", "gix-hash/serde"]

[dependencies]
gix-features = { version = "^0.43.1", path = "../gix-features", features = [
    "progress",
] }
gix-hash = { version = "^0.19.0", path = "../gix-hash" }
gix-bitmap = { version = "^0.2.14", path = "../gix-bitmap" }
gix-object = { version = "^0.50.1", path = "../gix-object" }
gix-validate = { version = "^0.10.0", path = "../gix-validate" }
gix-traverse = { version = "^0.47.0", path = "../gix-traverse" }
gix-lock = { version = "^18.0.0", path = "../gix-lock" }
gix-fs = { version = "^0.16.0", path = "../gix-fs" }
gix-utils = { version = "^0.3.0", path = "../gix-utils" }

hashbrown = "0.15.4"
fnv = "1.0.7"
thiserror = "2.0.0"
memmap2 = "0.9.7"
filetime = "0.2.15"
bstr = { version = "1.12.0", default-features = false }

serde = { version = "1.0.114", optional = true, default-features = false, features = [
    "derive",
] }
smallvec = "1.15.1"
itoa = "1.0.3"
bitflags = "2"

document-features = { version = "0.2.0", optional = true }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "1.0.8", default-features = false, features = [
    "std",
    "fs",
] }
libc = { version = "0.2.174" }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }

[package.metadata.docs.rs]
features = ["document-features", "serde"]
