lints.workspace = true

[package]
name = "gix-lock"
version = "17.0.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A git-style lock-file implementation"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version = "1.70"

[lib]
doctest = false
test = true

[dependencies]
gix-utils = { version = "^0.2.0", default-features = false, path = "../gix-utils" }
gix-tempfile = { version = "^17.0.0", default-features = false, path = "../gix-tempfile" }
thiserror = "2.0.0"

[dev-dependencies]
tempfile = "3.19.1"
