[package]
name = "gix-merge"
version = "0.5.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project implementing merge algorithms"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.70"

[lints]
workspace = true

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "gix-hash/serde", "gix-object/serde"]

[dependencies]
gix-hash = { version = "^0.18.0", path = "../gix-hash" }
gix-object = { version = "^0.49.0", path = "../gix-object" }
gix-filter = { version = "^0.19.0", path = "../gix-filter" }
gix-worktree = { version = "^0.41.0", path = "../gix-worktree", default-features = false, features = ["attributes"] }
gix-command = { version = "^0.6.0", path = "../gix-command" }
gix-path = { version = "^0.10.16", path = "../gix-path" }
gix-fs = { version = "^0.15.0", path = "../gix-fs" }
gix-tempfile = { version = "^17.1.0", path = "../gix-tempfile" }
gix-trace = { version = "^0.1.12", path = "../gix-trace" }
gix-quote = { version = "^0.6.0", path = "../gix-quote" }
gix-revision = { version = "^0.34.0", path = "../gix-revision", default-features = false, features = ["merge_base"] }
gix-revwalk = { version = "^0.20.0", path = "../gix-revwalk" }
gix-diff = { version = "^0.52.0", path = "../gix-diff", default-features = false, features = ["blob"] }
gix-index = { version = "^0.40.0", path = "../gix-index" }

thiserror = "2.0.0"
imara-diff = { version = "0.1.7" }
bstr = { version = "1.12.0", default-features = false }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-odb = { path = "../gix-odb" }
gix-utils = { path = "../gix-utils" }
termtree = "0.5.1"
pretty_assertions = "1.4.0"

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
