[package]
name = "gix-merge"
version = "0.10.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project implementing merge algorithms"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"

[lints]
workspace = true

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "gix-hash/serde", "gix-object/serde"]

[dependencies]
gix-hash = { version = "^0.21.1", path = "../gix-hash" }
gix-object = { version = "^0.54.0", path = "../gix-object" }
gix-filter = { version = "^0.24.0", path = "../gix-filter" }
gix-worktree = { version = "^0.46.0", path = "../gix-worktree", default-features = false, features = ["attributes"] }
gix-command = { version = "^0.6.4", path = "../gix-command" }
gix-path = { version = "^0.10.22", path = "../gix-path" }
gix-fs = { version = "^0.18.1", path = "../gix-fs" }
gix-tempfile = { version = "^20.0.0", path = "../gix-tempfile" }
gix-trace = { version = "^0.1.16", path = "../gix-trace" }
gix-quote = { version = "^0.6.1", path = "../gix-quote" }
gix-revision = { version = "^0.39.0", path = "../gix-revision", default-features = false, features = ["merge_base"] }
gix-revwalk = { version = "^0.25.0", path = "../gix-revwalk" }
gix-diff = { version = "^0.57.0", path = "../gix-diff", default-features = false, features = ["blob"] }
gix-index = { version = "^0.45.0", path = "../gix-index" }

thiserror = "2.0.17"
imara-diff = { version = "0.1.8" }
bstr = { version = "1.12.0", default-features = false }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-odb = { path = "../gix-odb" }
gix-utils = { path = "../gix-utils" }
termtree = "0.5.1"
pretty_assertions = "1.4.0"

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
