lints.workspace = true

[package]
name = "gix-negotiate"
version = "0.20.1"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project implementing negotiation algorithms"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.70"
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false
test = false

[dependencies]
gix-hash = { version = "^0.18.0", path = "../gix-hash" }
gix-object = { version = "^0.49.1", path = "../gix-object" }
gix-date = { version = "^0.10.2", path = "../gix-date" }
gix-commitgraph = { version = "^0.28.0", path = "../gix-commitgraph" }
gix-revwalk = { version = "^0.20.1", path = "../gix-revwalk" }
thiserror = "2.0.0"
smallvec = "1.15.0"
bitflags = "2"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-odb = { path = "../gix-odb" }
gix-ref = { path = "../gix-ref" }
