lints.workspace = true

[package]
name = "gix-negotiate"
version = "0.25.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project implementing negotiation algorithms"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"
include = ["src/**/*", "LICENSE-*"]

[lib]
doctest = false
test = false

[dependencies]
gix-hash = { version = "^0.21.1", path = "../gix-hash" }
gix-object = { version = "^0.54.0", path = "../gix-object" }
gix-date = { version = "^0.12.0", path = "../gix-date" }
gix-commitgraph = { version = "^0.31.0", path = "../gix-commitgraph" }
gix-revwalk = { version = "^0.25.0", path = "../gix-revwalk" }
thiserror = "2.0.17"
smallvec = "1.15.1"
bitflags = "2"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-odb = { path = "../gix-odb" }
gix-ref = { path = "../gix-ref" }
