lints.workspace = true

[package]
name = "gix-odb"
version = "0.69.1"
repository = "https://github.com/GitoxideLabs/gitoxide"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "Implements various git object databases"
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.70"
autotests = false

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "gix-hash/serde", "gix-object/serde", "gix-pack/serde"]

[dependencies]
gix-features = { version = "^0.42.1", path = "../gix-features", features = ["walkdir", "zlib", "crc32"] }
gix-hashtable = { version = "^0.8.1", path = "../gix-hashtable" }
gix-hash = { version = "^0.18.0", path = "../gix-hash" }
gix-date = { version = "^0.10.2", path = "../gix-date" }
gix-path = { version = "^0.10.18", path = "../gix-path" }
gix-quote = { version = "^0.6.0", path = "../gix-quote" }
gix-object = { version = "^0.49.1", path = "../gix-object" }
gix-pack = { version = "^0.59.1", path = "../gix-pack", default-features = false }
gix-fs = { version = "^0.15.0", path = "../gix-fs" }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

tempfile = "3.20.0"
thiserror = "2.0.0"
parking_lot = { version = "0.12.4" }
arc-swap = "1.5.0"

document-features = { version = "0.2.0", optional = true }

[package.metadata.docs.rs]
features = ["document-features", "serde"]
