lints.workspace = true

[package]
name = "gix-path"
version = "0.10.19"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing paths and their conversions"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.70"

[lib]
doctest = true

[dependencies]
gix-trace = { version = "^0.1.13", path = "../gix-trace" }
gix-validate = { version = "^0.10.0", path = "../gix-validate" }
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
thiserror = "2.0.0"
once_cell = "1.21.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
home = "0.5.5"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
serial_test = { version = "3.1.0", default-features = false }

[target.'cfg(windows)'.dev-dependencies]
known-folders = "1.3.1"
windows = { version = "0.61.3", features = ["Win32_System_Threading"] }
winreg = "0.55.0"
