lints.workspace = true

[package]
name = "gix-pathspec"
version = "0.8.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dealing magical pathspecs"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.65"
include = ["src/**/*", "LICENSE-*", "README.md"]

[lib]
doctest = false

[dependencies]
gix-glob = { version = "^0.17.0", path = "../gix-glob" }
gix-path = { version = "^0.10.12", path = "../gix-path" }
gix-attributes = { version = "^0.23.0", path = "../gix-attributes" }
gix-config-value = { version = "^0.14.9", path = "../gix-config-value" }

bstr = { version = "1.3.0", default-features = false, features = ["std"] }
bitflags = "2"
thiserror = "2.0.0"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
once_cell = "1.12.0"
serial_test = "3.1.1"
