lints.workspace = true

[package]
name = "gix-prompt"
version = "0.11.1"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project for handling prompts in the terminal"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version = "1.70"

[lib]
doctest = false

[dependencies]
gix-command = { version = "^0.6.2", path = "../gix-command" }
gix-config-value = { version = "^0.15.1", path = "../gix-config-value" }

thiserror = "2.0.0"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.0.8", features = ["termios"] }
parking_lot = "0.12.4"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
serial_test = { version = "3.1.0", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "macos"))'.dev-dependencies]
expectrl = "0.7.0"
