lints.workspace = true

[package]
name = "gix-ref"
version = "0.53.1"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate to handle git references"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.74"
autotests = false

[lib]
doctest = false
test = true

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "gix-hash/serde", "gix-actor/serde", "gix-object/serde"]

[dependencies]
gix-features = { version = "^0.43.1", path = "../gix-features", features = ["walkdir"] }
gix-fs = { version = "^0.16.1", path = "../gix-fs" }
gix-path = { version = "^0.10.20", path = "../gix-path" }
gix-hash = { version = "^0.19.0", path = "../gix-hash" }
gix-object = { version = "^0.50.2", path = "../gix-object" }
gix-utils = { version = "^0.3.0", path = "../gix-utils" }
gix-validate = { version = "^0.10.0", path = "../gix-validate" }
gix-actor = { version = "^0.35.4", path = "../gix-actor" }
gix-lock = { version = "^18.0.0", path = "../gix-lock" }
gix-tempfile = { version = "^18.0.0", default-features = false, path = "../gix-tempfile" }

thiserror = "2.0.17"
winnow = { version = "0.7.12", features = ["simd"] }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

# packed refs
memmap2 = "0.9.7"

document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-date = { path = "../gix-date" }

[package.metadata.docs.rs]
features = ["document-features", "serde"]
