lints.workspace = true

[package]
name = "gix-ref"
version = "0.61.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate to handle git references"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"
autotests = false

[lib]
doctest = false
test = true

[features]
## Enable support for the SHA-1 hash by enabling the respective feature in the `gix-hash` crate.
sha1 = ["gix-hash/sha1"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde = ["dep:serde", "gix-hash/serde", "gix-actor/serde", "gix-object/serde"]

[dependencies]
gix-features = { version = "^0.46.2", path = "../gix-features", features = ["walkdir"] }
gix-fs = { version = "^0.19.2", path = "../gix-fs" }
gix-path = { version = "^0.11.2", path = "../gix-path" }
gix-hash = { version = "^0.23.0", path = "../gix-hash" }
gix-object = { version = "^0.58.0", path = "../gix-object" }
gix-utils = { version = "^0.3.1", path = "../gix-utils" }
gix-validate = { version = "^0.11.0", path = "../gix-validate" }
gix-actor = { version = "^0.40.0", path = "../gix-actor" }
gix-lock = { version = "^21.0.0", path = "../gix-lock" }
gix-tempfile = { version = "^21.0.0", default-features = false, path = "../gix-tempfile" }

thiserror = "2.0.18"
winnow = { version = "1.0.0", features = ["simd"] }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

# packed refs
memmap2 = "0.9.10"

document-features = { version = "0.2.1", optional = true }

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }
gix-date = { path = "../gix-date" }
gix-hash = { path = "../gix-hash", features = ["sha1", "sha256"] }

[package.metadata.docs.rs]
features = ["sha1", "document-features", "serde"]
